# financial-control-tower

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  PROJECT_COMPLETE.md  QUICKSTART.md  README.md  README_NEW.md  REFACTOR_CHECKLIST.md  SECURITY_CHECKLIST.md  UX_GUIDE.md  erp_integration_design.md  fraud_rule_metrics.py  main.py  pyproject.toml  pytest.ini  quick_demo.py  reconciliation_matrix.md  requirements.txt  run.sh  security_architecture.md  verify_commands.sh
.github/workflows/: ci.yml
artifacts/: quickstart_report.json  reconciliation_report_20260208_011527.json  reconciliation_report_20260208_013325.json  reconciliation_report_20260208_013722.json  reconciliation_report_20260208_013739.json
data/: audit.db  db_finance.db  db_operations.db  sample_erp.csv
data/sample/: finance_sample.csv  operations_sample.csv
docs/: CI-RUNBOOK.md  ER_DIAGRAM.md  RELEASE-CHECKLIST.md  SQL_RECONCILIATION.md  TROUBLESHOOTING.md  configuration.md  faq.md  glossary.md  legal.md  limitations.md  quickstart.md  real-data.md  rollback.md
scripts/: download_data.py  generate_er_diagram.py  preprocess.py  run_financial_audit.py  run_real.py  setup_project.py
src/: __init__.py
src/analysis/: __init__.py
src/audit/: __init__.py  financial_control_tower.py
src/data_engineering/: __init__.py  db_connector.py  init_erp_databases.py
src/visualization/: __init__.py
tests/: test_basic.py  test_e2e.py
